--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,4 @@
-@import "./color-1.css";
+/* @import "./color-1.css"; */
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap");
 
 /* GLOBAL STYLES START */
@@ -226,6 +226,42 @@ img {
   background-color: #4dd0e1;
 }
 
+.section-title {
+  padding: 0 15px;
+  flex: 0 0 100%;
+  text-align: center;
+  max-width: 100%;
+  margin-bottom: 60px;
+}
+
+.section-title h2 {
+  display: inline-block;
+  font-size: 30px;
+  font-weight: 700;
+  color: var(--text-black-900);
+  text-transform: uppercase;
+  margin: 0;
+}
+
+.section-title h2::before {
+  content: attr(data-heading);
+  display: block;
+  font-size: 16px;
+  font-weight: 600;
+  color: var(--skin-color);
+}
+
+@keyframes fadeInTop {
+  0% {
+    opacity: 0;
+    transform: translateY(-25px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
 /* GLOBAL STYLES END */
 
 /* Header START */
@@ -438,3 +474,273 @@ img {
 }
 
 /* HOME SECTION END */
+
+/* ABOUT SECTION START */
+.about-section {
+  min-height: 100vh;
+  padding: 80px 0 0;
+}
+
+.about-section .about-img {
+  flex: 0 0 40%;
+  max-width: 40%;
+  padding: 0 15px;
+}
+
+.about-section .about-img .img-box {
+  padding: 15px;
+  border-radius: 5px;
+}
+
+.about-section .about-img .img-box {
+  width: 100%;
+  border: 10px solid transparent;
+  border-radius: 5px;
+}
+
+.about-section .about-img .social-links {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.about-section .about-img .social-links a {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  line-height: 40px;
+  color: var(--text-black-600);
+  margin: 0 4px;
+  border-radius: 50%;
+  transition: all 0.3 ease;
+}
+
+.about-section .about-img .social-links a:hover {
+  color: var(--skin-color);
+}
+
+.about-section .about-img .social-links a i {
+  line-height: 40px;
+}
+
+.about-section .about-img .social-links a::after {
+  border-radius: 50%;
+}
+
+.about-section .about-info {
+  flex: 0 0 60%;
+  max-width: 60%;
+  padding: 0 15px;
+}
+
+.about-section .about-info p {
+  font-size: 16px;
+  line-height: 26px;
+  margin-bottom: 15px;
+  color: var(--text-black-600);
+}
+.about-section .about-info span {
+  font-weight: 600;
+}
+
+.about-section .about-info .btn-1 {
+  margin: 30px 20px 0 0;
+}
+
+.about-section .about-tabs {
+  padding: 60px 15px 50px;
+  flex: 0 0 100%;
+  max-width: 100%;
+  text-align: center;
+}
+
+.about-section .about-tabs .tab-item {
+  display: inline-block;
+  margin: 0 5px 10px;
+  padding: 5px 10px;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-size: 16px;
+  color: var(--text-black-600);
+  font-weight: 500;
+  text-transform: capitalize;
+}
+
+.about-section .about-tabs .tab-item:hover:not(.active) {
+  opacity: 0.6;
+}
+
+.about-section .about-tabs .tab-item:active {
+  color: var(--skin-color);
+}
+
+.about-section .tab-content {
+  flex: 0 0 100%;
+  max-width: 100%;
+  display: none;
+}
+
+.about-section .active {
+  display: block;
+  animation: fadeInTop 0.5s ease;
+}
+
+.about-section .skills {
+  padding: 0 0 40px;
+}
+
+.about-section .skills .skill-item {
+  flex: 0 0 50%;
+  max-width: 50%;
+  padding: 0 15px;
+  margin-bottom: 40px;
+}
+
+.about-section .skills .skill-item p {
+  font-size: 16px;
+  color: var(--text-black-600);
+  text-transform: capitalize;
+  margin: 0 0 10px;
+}
+
+.about-section .skills .skill-item .progress {
+  height: 20px;
+  border-radius: 10px;
+  position: relative;
+}
+
+.about-section .skills .skill-item .progress-bar {
+  background-color: var(--text-black-600);
+  height: 6px;
+  left: 7px;
+  top: 7px;
+  position: absolute;
+  border-radius: 10px;
+}
+
+.about-section .skills .skill-item .progress-bar span {
+  position: absolute;
+  right: 0;
+  top: 0;
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--text-black-600);
+  margin-top: -40px;
+}
+
+.about-section .experience,
+.about-section .education {
+  padding-bottom: 80px;
+}
+
+.about-section .timeline {
+  flex: 0 0 100%;
+  max-width: 100%;
+}
+
+.about-section .timeline .timeline-item {
+  flex: 0 0 100%;
+  max-width: 100%;
+  padding: 0 15px;
+}
+
+.about-section .timeline::before {
+  content: "";
+  width: 1px;
+  height: 100%;
+  left: 50%;
+  background-color: var(--bg-black-100);
+  position: absolute;
+}
+
+.about-section .timeline .timeline-item:nth-child(odd) {
+  padding-right: calc(50% + 50px);
+  text-align: right;
+}
+
+.about-section .timeline .timeline-item:nth-child(even) {
+  padding-left: calc(50% + 50px);
+}
+
+.about-section .timeline .timeline-item-inner {
+  padding: 30px;
+  border-radius: 5px;
+  position: relative;
+}
+
+.about-section .timeline .timeline-item-inner::before {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 1px;
+  top: 37px;
+  z-index: -1;
+  background-color: var(--bg-black-100);
+}
+.about-section
+  .timeline
+  .timeline-item:nth-child(odd)
+  .timeline-item-inner::before {
+  right: -30px;
+}
+
+.about-section
+  .timeline
+  .timeline-item:nth-child(even)
+  .timeline-item-inner::before {
+  left: -30px;
+}
+
+.about-section .timeline .timeline-item-inner .icon {
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  border: 1px solid var(--bg-black-50);
+  border-radius: 50%;
+  font-size: 16px;
+  color: var(--skin-color);
+  background-color: var(--bg-black-100);
+  line-height: 40px;
+  position: absolute;
+  top: 18px;
+}
+
+.about-section .timeline .timeline-item:nth-child(odd) .icon {
+  right: -70px;
+}
+
+.about-section .timeline .timeline-item:nth-child(even) .icon {
+  left: -70px;
+}
+
+.about-section .timeline .timeline-item-inner span {
+  font-weight: 500;
+  color: var(--skin-color);
+  display: block;
+  margin: 0 0 10px;
+  text-transform: capitalize;
+}
+
+.about-section .timeline .timeline-item-inner h3 {
+  font-weight: 600;
+  color: var(--text-black-700);
+  margin: 0 0 5px;
+  text-transform: capitalize;
+  font-size: 20px;
+}
+
+.about-section .timeline .timeline-item-inner h4 {
+  font-size: 16px;
+  font-style: italic;
+  color: var(--text-black-600);
+  margin: 0;
+}
+
+.about-section .timeline .timeline-item-inner p {
+  font-size: 16px;
+  color: var(--text-black-600);
+  line-height: 26px;
+  margin: 15px 0 0;
+}
+/* ABOUT SECTION END */
