--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,6 +17,22 @@
   --inner-shadow-0: inset 0 0 0 #d0d0d0, inset 0 0 0 #f8f8f8;
 }
 
+/* OVERRIDING CSS VARIABLE FOR DARK THEME  */
+
+body.dark {
+  --bg-black-900: #ffffff;
+  --bg-black-100: #353535;
+  --bg-black-50: #2b2c2f;
+  --bg-opacity: rgba(43, 44, 47, 0.5);
+  --text-black-900: #ffffff;
+  --text-black-700: #ffffff;
+  --text-black-600: #bbbbbb;
+  --outer-shadow: 3px 3px 3px #222327, 3px 3px 3px #363636;
+  --outer-shadow-0: 0 0 0 #222327, 0 0 0 #363636;
+  --inner-shadow: inset 3px 3px 3px #222327, inset 3px 3px 3px #363636;
+  --inner-shadow-0: inset 0 0 0 #222327, inset 0 0 0 #363636;
+}
+
 body {
   font-size: 16px;
   line-height: 1.5;
@@ -270,7 +286,65 @@ img {
   }
 }
 
+.section.hide {
+  display: none;
+}
+
 /* GLOBAL STYLES END */
+
+/* PRELOADER START  */
+.preloader {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1500;
+  background-color: var(--bg-black-50);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.preloader.fade-out {
+  opacity: 0;
+  transition: all 0.6s ease;
+}
+
+.preloader .box {
+  width: 65px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.preloader .box div {
+  height: 15px;
+  width: 15px;
+  background-color: var(--skin-color);
+  border-radius: 50%;
+  animation: loaderAni 1s ease infinite;
+}
+
+.preloader .box div:nth-child(2) {
+  animation-delay: 0.1s;
+}
+
+.preloader .box div:nth-child(3) {
+  animation-delay: 0.2s;
+}
+
+@keyframes loaderAni {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-30px);
+  }
+}
+
+/* PRELOADER END  */
 
 /* Header START */
 .header {
@@ -341,7 +415,7 @@ img {
 
 /* Header END */
 
-/* NAVIAGTION START */
+/* NAVIGATION START */
 .nav-menu {
   position: fixed;
   background-color: var(--bg-black-50);
@@ -353,6 +427,39 @@ img {
   z-index: 999;
   overflow-y: auto;
   visibility: hidden;
+}
+
+.fade-out-effect {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--bg-black-50);
+  z-index: -1;
+  visibility: hidden;
+}
+
+.fade-out-effect.active {
+  visibility: visible;
+  z-index: 1000;
+  animation: fadeOut 0.3s ease-out;
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.nav-menu.open {
+  visibility: visible;
+  opacity: 1;
+  z-index: 999;
+  transition: all 0.3s ease-in;
 }
 
 .nav-menu .close-nav-menu {
@@ -400,7 +507,7 @@ img {
   display: inline-block;
   font-size: 28px;
   font-weight: 600;
-  color: var(--text-black-700);
+  color: var(--text-black-600);
   padding: 5px 30px;
   text-transform: capitalize;
   border-radius: 30px;
@@ -457,7 +564,7 @@ img {
   font-weight: 700;
 }
 .home-section .home-text h1 {
-  color: var(--text-black-700);
+  color: var(--text-black-600);
   font-size: 20px;
   margin: 0;
   font-weight: 500;
@@ -784,6 +891,7 @@ img {
   display: block;
   margin: 0 auto 30px;
   position: relative;
+  color: var(--text-black-600);
 }
 
 .service-section .service-item-inner .icon::after {
